feat: Implementación inicial aislada de AuditoriaPadreModule udistrital/sisifo_documentacion#557
